--- a/css/styles.css
+++ b/css/styles.css
@@ -2,16 +2,24 @@ body {
     font-family: 'Raleway';
 }
 
-@font-face {
-    font-family: 'Roboto700';
-    src: url(../fonts/Roboto/Roboto-Bold.ttf)
+.list {
+    list-style: none;
 }
 
-.header-link1 {
+.link {
+    text-decoration: none;
+}
+
+/* @font-face {
+    font-family: 'Roboto700';
+    src: url(../fonts/Roboto/Roboto-Bold.ttf)
+} */
+
+.header-link-WebStudio {
+    
     font-weight: 800;
     font-size: 18px;
     line-height: 1.16em;
-    /* identical to box height, or 117% */
     letter-spacing: 0.03em;
     color: #4D5AE5;
 }
@@ -19,7 +27,27 @@ body {
 .header-link2 {
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.16em;
+    line-height: (24px/16px)em;
     /* identical to box height, or 117% */
     letter-spacing: 0.03em;
+}
+
+.header-adress-list { 
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: (24px/16px)em;
+    letter-spacing: 0.02em;
+    color: #434455;
+
+}
+
+
+
+button {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    cursor: default;
 }
