--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ font-family: 'Roboto';
         color: #FFFFFF;
 }
 
-button {
+.main-btn {
     font-family: 'Roboto';
        font-weight: 500;
         font-size: 16px;
@@ -207,4 +207,82 @@ line-height: 24px;
 letter-spacing: 0.02em;
 /* CLOUD */
 color: #F4F4FD
+}
+
+/* PORTFOLIO */
+.list {
+}
+
+.btn {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height, or 150% */
+
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.04em;
+
+/* IRIS */
+
+color: #4D5AE5;
+
+/* CLOUD */
+
+background: #F4F4FD;
+/* CORNFLOWER */
+
+border: 1px solid #E7E9FC;
+border-radius: 4px;
+
+}
+
+.btn-active {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    /* identical to box height, or 150% */
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.04em;
+        /* WHITE */
+    color: #FFFFFF;
+    /* OCEAN */
+     background: #404BBF;
+    border-radius: 4px;
+}
+
+/*! PROJECTS */
+
+.list-of-projects {
+}
+.projects-list-item {
+}
+.project-title {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height, or 120% */
+    letter-spacing: 0.02em;
+    /* NAVY BLUE */
+    color: #2E2F42;  
+}
+.project-description {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 24px;
+/* identical to box height, or 150% */
+letter-spacing: 0.02em;
+/* SLATE */
+color: #434455;
 }
