--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-/* Опис змінних по всьому документ. 
-Якщо сворити в секції, то тільки в цієї секції буде працювати */
+/* Опис змінних по всьому документ. Якщо сворити в секції, то тільки в цієї секції буде працювати */
 :root {
         /* NAVY BLUE */
      --color-navyblue: #2E2F42
