--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     /* SLATE */
     color: #434455;
     background-color: #FFFFFF
