--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,19 @@
 /* Опис змінних по всьому документ. Якщо сворити в секції, то тільки в цієї секції буде працювати */
 :root {
         /* NAVY BLUE */
-     --color-navyblue: #2E2F42;
+    --color-navyblue: #2E2F42;
 
     /* IRIS */
-     --color-iris: #4d5ae5;
+    --color-iris: #4d5ae5;
+         /* OCEAN */
+    --color-ocean: #404BBF;
+     /* CLOUD */
+    --color-cloud: #F4F4FD;
 }
 
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
     /* SLATE */
     color: #434455;
     background-color: #FFFFFF
@@ -51,14 +55,21 @@ body {
 
 
 .header-navigation-link{
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.17em;
-        /* identical to box height, or 150% */
-        letter-spacing: 0.03em;
-        /* NAVY BLUE */    
-        color: var(--color-navyblue);
+    font-style: normal;     
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5em;
+    /* identical to box height, or 150% */
+    letter-spacing: 0.02em;
+    /* NAVY BLUE */    
+    color: var(--color-navyblue);
 }
+
+.header-navigation-link:hover, .header-navigation-link:focus {
+    color: var(--color-ocean);
+    font-style: normal 
+}
+
 
 .header-contact-link {
     font-style: normal;
@@ -71,6 +82,9 @@ body {
     color: #434455;
 }
 
+.header-contact-link:hover {
+    color: var(--color-ocean);
+}
 /* !Section 1 */
 .top-section {
     background: #2E2F42; ;
@@ -88,6 +102,7 @@ body {
 }
 
 .main-btn {
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -204,7 +219,7 @@ color: #2E2F42;
 /* Logo and logospan in the heared */
 .logo-studio-bottom {
     /* CLOUD */
-    color: #F4F4FD;
+    color: var(--color-cloud);
 }
 
 .footer-description {
@@ -215,32 +230,27 @@ line-height: 1.17;
 /* or 150% */
 letter-spacing: 0.02em;
 /* CLOUD */
-color: #F4F4FD
+color: var(--color-cloud;)
 }
 
 /* PORTFOLIO */
 .list {
 }
 
-.btn {
+.btn-features-portfolio {
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 24px;
 /* identical to box height, or 150% */
-
-display: flex;
-align-items: center;
+/* display: flex;
+align-items: center; */
 text-align: center;
 letter-spacing: 0.04em;
-
 /* IRIS */
-
-color: #4D5AE5;
-
+color: var(--color-iris);
 /* CLOUD */
-
-background: #F4F4FD;
+background: var(--color-cloud);
 /* CORNFLOWER */
 
 border: 1px solid #E7E9FC;
@@ -274,16 +284,17 @@ border-radius: 4px;
 .project-title {
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     /* identical to box height, or 120% */
     letter-spacing: 0.02em;
     /* NAVY BLUE */
     color: #2E2F42;  
 }
 .project-description {
+    text-decoration: none;
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     /* identical to box height, or 150% */
     letter-spacing: 0.02em;
     /* SLATE */
