--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body {
 
 .link {
     text-decoration: none;
+    font-style: normal;
 }
 
 /* @font-face {
@@ -265,31 +266,41 @@ background: var(--color-cloud);
 
 border: 1px solid #E7E9FC;
 border-radius: 4px;
-
+font-family: "Roboto", sans-serif;
+cursor: pointer;
 }
 
-.btn-active {
+.btn-features-portfolio:hover, .btn-features-portfolio:focus {
+    color: #FFFFFF;
+    background-color: #404BBF;
+}
+
+
+
+/* .btn-active {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    /* identical to box height, or 150% */
+     identical to box height, or 150% 
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 0.04em;
-        /* WHITE */
+         WHITE 
     color: #FFFFFF;
-    /* OCEAN */
+     OCEAN 
      background: #404BBF;
     border-radius: 4px;
-}
+} */
 
 /*! PROJECTS */
 
 .list-of-projects {
+    
 }
 .projects-list-item {
+    
 }
 .project-title {
     font-weight: 500;
@@ -298,7 +309,8 @@ border-radius: 4px;
     /* identical to box height, or 120% */
     letter-spacing: 0.02em;
     /* NAVY BLUE */
-    color: #2E2F42;  
+    color: #2E2F42; 
+    text-decoration: none; 
 }
 .project-description {
     text-decoration: none;
